--- a/_includes/footer-post.html
+++ b/_includes/footer-post.html
@@ -1,8 +1,15 @@
 <br>
 <hr>
 <br>
-<div class="footer-post">
-	<p>Did you like of something here? How about helping me buy some game?<br>
-	I'll appreciate it!</p>
-	<p>Bitcoin Wallet <i class="fa fa-btc"></i> 1Agt7r7aCAeWk5DyXXNyJXAXC4xxysiWjJ<br>Ethereum Wallet <i class="fa fa-money"></i> 0x19BD447c94499BdcA154Dc1BeF9FCf1f4c427C16</p>
+<div class="footer_post">
+	<p>System:<br>
+		Microsoft Windows 95<br>
+		Registered to:<br>
+		PSPCrazy<br>
+		PSPCrazy<br>
+		15795-OEM-0001355-07757<br>
+		Computer:<br>
+		Pentium Pro(r)<br>
+		32.0MB RAM
+	</p>
 </div>
