--- a/_includes/topbar.html
+++ b/_includes/topbar.html
@@ -1,5 +1,5 @@
 <ul class="topbar">
 	<a href="/me"><li><u>a</u>bout</li></a>
 
-	<a href="/test_page"><li><u>t</u>est_page</li></a>
+	<a href="/system"><li><u>t</u>est_page</li></a>
 </ul>
